--- a/Curriculo/contato.html
+++ b/Curriculo/contato.html
@@ -8,3 +8,17 @@
     <h2>Contato</h2>
     <p><strong>Email:</strong> julianapelozopacheco@gmail.com</p>
     <p><strong>Telefone:</strong> (81) 99312-6785</p>
+    <div>
+        <center>
+            <a href="https://github.com/JulianaPelozo" target="_blank" rel = "noopener noreferrer"> 
+            <img src="imagens/github.png" alt="Logo do github" height="100px"/> </a>
+        </center>
+    </div>
+    <div>
+        <center>
+            <a href="https://www.linkedin.com/in/juliana-pelozo-pacheco-641682255/" target="_blank" rel = "noopener noreferrer">
+            <img src="imagens/174857.png" alt="Logo do LinkedIn" height="50px"/>
+            </a>
+        </center>
+</body>
+</html>
