--- a/Curriculo/curriculo.html
+++ b/Curriculo/curriculo.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="imagens/icon.png"
     />
-    <link rel="stylesheet" href="cabecalho.css">
+    <link rel="stylesheet" href="style.css">
     <title>Currículo - Juliana Pacheco</title>
 </head>
 <body>
