--- a/Curriculo/formacao.html
+++ b/Curriculo/formacao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formação Acadêmica</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="formacao" class="container">
@@ -14,7 +15,7 @@
                 <li><a href="https://www.upe.br/bacharelado-em-administracao.html" target="_blank">Graduação em Administração</a></li>
                 <dd>- UPE - 2016 a 2021</dd>
                 <li><a href="https://faculdadesenacpe.edu.br/graduacao/analise-e-desenvolvimento-de-sistemas"
-                        target="_blank">Tecnóloga em Análise e Desenvolvimento de Sistenas</a> </li>
+                        target="_blank">Tecnóloga em Análise e Desenvolvimento de Sistemas</a> </li>
                 <dd>- SENAC - 2024 a 2026</dd>
             </ol>
         </div>
