--- a/Curriculo/experiencia.html
+++ b/Curriculo/experiencia.html
@@ -4,48 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiência</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h2>Experiência Profissional:</h2>
-    <center>
-        <table>
+<div class="card hrBcg my-2"></div>
+</div>
+<div id="experiencia" class="container">
+    <h2>Experiência Profissional</h2>
+    <div class="card subTopBcgExp my-2"></div>
+    <div class="container">
+        <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Período</th>
-                    <th>Empresa</th>
-                    <th>Cargo</th>
-                    <th>Descrição</th>
+                    <th class="curriculo largo10">Período</th>
+                    <th class="curriculo largo20">Empresa</th>
+                    <th class="curriculo">Cargo</th>
+                    <th class="curriculo">Descrição</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>2021-2022</td>
-                    <td>Maninho Pneus e Peças</td>
-                    <td>Estagiária Financeiro</td>
-                    <td>Conciliação bancária</td>
+                    <td>Maninho Pneus e Peças para Motocicletas</td>
+                    <td>Estagiária em Administração</td>
+                    <td>Atuando em levantamento de faturamento, fechamento de caixa, baixa em cartões
+                        de crédito e débito e conciliação bancária.
+                    </td>
                 </tr>
                 <tr>
-                    <td>2022-2022</td>
-                    <td>Maninho Pneus e Peças</td>
-                    <td>Auxiliar Adminsitrativo</td>
-                    <td>Relação de gastos dos caminhões
-                </td>
+                    <td>2022-2023</td>
+                    <td>Maninho Pneus e Peças para Motocicletas</td>
+                    <td>Assistente Administrativo</td>
+                    <td>Atuando em levantamento de faturamento, fechamento de caixa, baixa em cartões de 
+                        crédito e débito, conciliação bancária, cálculo de mark-up e gerenciamento de estoque em 
+                        todas as lojas.
+                    </td>
+                </tr>
                 <tr>
-                    <td>2023-2023</td>
+                    <td>Abril 2023 - Junho 2023</td>
                     <td>Red House International School</td>
                     <td>Apoio de secretaria</td>
-                    <td>Atendimento ao cliente</td>
+                    <td>Gerenciamento de estoque e assistência a secretaria.</td>
                 </tr>
                 <tr>
-                    <td>2025-Atual</td>
-                    <td>Embarque Digital</td>
-                    <td>Monitoria</td>
-                    <td>Documentação de procedimentos</td>
-                    
+                    <td>2023 - Presente</td>
+                    <td>Autônomo</td>
+                    <td>Freelancer</td>
+                    <td>Fazendo cálculos para advogados trabalhistas para contratos e processos, fazendo atualização
+                        monetária utilizando a taxa selic.</td>
                 </tr>
             </tbody>
-            
         </table>
-    </center>
-</body>
-</html>
+    </div>
