--- a/Curriculo/softSkills.html
+++ b/Curriculo/softSkills.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soft Skills</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>Soft Skills</h2>
